--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
   </head>
   <body>
     <h1>Farmer Fred's Watermelon Paradise</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Citrullus lanatus is a plant species in the family Cucurbitaceae, a vine-like (scrambler and trailer) flowering plant originating in West Africa. It is cultivated for its fruit. The subdivision of this species into two varieties, watermelons (Citrullus lanatus (Thunb.) var. lanatus) and citron melons (Citrullus lanatus var. citroides (L. H. Bailey) Mansf.), originated with the erroneous synonymization of Citrullus lanatus (Thunb.) Matsum. & Nakai and Citrullus vulgaris Schrad. by L.H. Bailey in 1930. Molecular data including sequences from the original collection of Thunberg and other relevant type material, show that the sweet watermelon (Citrullus vulgaris Schrad.) and the bitter wooly melon Citrullus lanatus (Thunb.) Matsum. & Nakai are not closely related to each other. Since 1930, thousands of papers have misapplied the name Citrullus lanatus (Thunb.) Matsum. & Nakai for the watermelon, and a proposal to conserve the name with this meaning was accepted by the relevant nomenclatural committee and confirmed at the International Botanical Congress in Shenzhen in China in 2017.</p>
     <div class="Watermelon">
       <img src="https://cdn140.picsart.com/300108022273201.jpg?c256x256" alt="">
       <img src="https://s3.amazonaws.com/pickacarrot2/high_mowing_seeds/c64c79368c9d71bb48b0cfbece20b242a32ef9c5_42c40352aec322d6595a584e6a8595c61e1f1fa2_af5e7ead9e7151f63bc1d866a8be7e7174ff92a4.jpg" alt="">
       <img src="https://i.pinimg.com/originals/12/a0/c6/12a0c614417e6c6546fcc0e773c43893.png" alt="">
   </div>
+  <ul>
+    <li>Fried Watermelon on a stick</li>
+    <li>Watermelon-a-tini</li>
+    <li>Watermelon fried rice</li>
+    <li>Watermelon Crimson Sweet</li>
+    <li>Watermelon Hubba Bubba</li>
+  </ul>
   </body>
+  <footer>
+  <p>Copyright ©  2019 12 Melonville, West Cantaloupe, St. Melatonin Freds Watermelon Farm USA, INC, All rights reserved. Terms of Use | Privacy Policy - REVISED <br> +222-986-4471. freddykjk12@aol.com
+  </p></footer>
 </html>
